--- a/self-assessment.html
+++ b/self-assessment.html
@@ -1,78 +1,109 @@
----
-layout: null
-title: "Professional Self-Assessment"
----
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Professional Self-Assessment</title>
+  <style>
+    body {
+      background-color: #F4F7FB;
+      font-family: 'Segoe UI', sans-serif;
+      color: #00244E;
+      line-height: 1.6;
+      max-width: 800px;
+      margin: 4rem auto;
+      padding: 0 1rem;
+    }
 
-<style>
-  body {
-    background-color: #F4F7FB;
-    font-family: 'Segoe UI', sans-serif;
-    padding: 2rem;
-    color: #00244E;
-    max-width: 800px;
-    margin: auto;
-    line-height: 1.6;
-  }
+    h1, h2 {
+      color: #00244E;
+      border-left: 5px solid #FDB913;
+      padding-left: 1rem;
+    }
 
-  h1, h2 {
-    color: #003F88;
-    border-bottom: 2px solid #FDB913;
-    padding-bottom: 0.3rem;
-  }
+    h1 {
+      font-size: 2rem;
+      margin-top: 2rem;
+    }
 
-  strong {
-    color: #00244E;
-  }
-</style>
+    h2 {
+      font-size: 1.5rem;
+      margin-top: 1.75rem;
+    }
 
-# Professional Self-Assessment
+    ul {
+      padding-left: 1.5rem;
+    }
 
-As I reflect on my studies and work in the Computer Science program at SNHU, this capstone project gives me a sense of pride as it represents both my starting point and the culmination of my growth. I chose to revisit the very first program I ever created at SNHU—a simple text-based adventure game—and enhance it using everything I’ve learned. This approach allowed me to demonstrate mastery across core areas of computer science while building an artifact I’m truly proud of.
+    strong {
+      color: #003F88;
+    }
 
-## Skills Overview
+    a {
+      color: #003F88;
+      text-decoration: underline;
+    }
 
-Throughout the program, I developed a strong foundation in collaborative practices. While this capstone was completed individually, I brought collaborative strategies into my work by conducting a code review, recording a walkthrough video, and organizing my work on GitHub. These elements were designed to simulate real-world collaboration and make my project understandable to a variety of audiences—professors, peers, or future employers.
+    footer {
+      text-align: center;
+      font-size: 0.85rem;
+      color: #668;
+      padding: 2rem 0 1rem 0;
+      margin-top: 4rem;
+    }
+  </style>
+</head>
+<body>
 
-Effective communication was also central to this project. This was delivered through writing in my enhancement narratives, a thorough video code review, and a clean, responsive GitHub Pages portfolio using a hand-coded layout. I focused on communicating not just my code, but also the thinking behind it.
+  <h1>Professional Self-Assessment</h1>
 
-In terms of technical depth, I demonstrated my understanding of data structures and algorithms through my second enhancement, where I replaced hard-coded conditional logic with a dynamic dictionary-based system. This improvement made the game logic more maintainable, modular, and scalable for future development.
+  <p>As I reflect on my studies and work in the Computer Science program at SNHU, this capstone project gives me a sense of pride as it represents both my starting point and the culmination of my growth. I chose to revisit the very first program I ever created at SNHU—a simple text-based adventure game—and enhance it using everything I’ve learned. This approach allowed me to demonstrate mastery across core areas of computer science while building an artifact I’m truly proud of.</p>
 
-My work in software engineering and database design is most visible in Enhancements One and Three. I applied modular design patterns, added new gameplay features, and implemented persistent storage using SQLite. These changes were added into the existing codebase, highlighting my ability to effectively improve and refactor existing code iteratively.
+  <h2>Skills Overview</h2>
 
-Finally, I’ve developed a growing security mindset. Throughout my enhancements, I considered maintainability, separation of concerns, and input handling. While there’s always more to learn in this area, I now approach each change with a focus on clean design, anticipating vulnerabilities, and ensuring long-term maintainability of the codebase.
+  <p>Throughout the program, I developed a strong foundation in collaborative practices. While this capstone was completed individually, I brought collaborative strategies into my work by conducting a code review, recording a walkthrough video, and organizing my work on GitHub. These elements were designed to simulate real-world collaboration and make my project understandable to a variety of audiences—professors, peers, or future employers.</p>
 
-## How My Artifacts Fit Together
+  <p>Effective communication was also central to this project. This was delivered through writing in my enhancement narratives, a thorough video code review, and a clean, responsive GitHub Pages portfolio using a hand-coded layout. I focused on communicating not just my code, but also the thinking behind it.</p>
 
-This capstone project is rooted in a single program, but each enhancement transforms it in a new way, showcasing a different area of computer science:
+  <p>In terms of technical depth, I demonstrated my understanding of data structures and algorithms through my second enhancement, where I replaced hard-coded conditional logic with a dynamic dictionary-based system. This improvement made the game logic more maintainable, modular, and scalable for future development.</p>
 
-- **Enhancement One – Software Design & Engineering**: Improved modularity and user experience by introducing a start menu system and restructuring gameplay logic into dedicated functions.
-- **Enhancement Two – Algorithms & Data Structures**: Replaced inefficient `if`/`elif` chains with a dynamic dictionary-based system, improving maintainability and scalability.
-- **Enhancement Three – Databases**: Integrated a custom SQLite database to add save/load functionality, introducing persistent storage and opening the door for future features.
+  <p>My work in software engineering and database design is most visible in Enhancements One and Three. I applied modular design patterns, added new gameplay features, and implemented persistent storage using SQLite. These changes were added into the existing codebase, highlighting my ability to effectively improve and refactor existing code iteratively.</p>
 
-The continuity between these enhancements shows viewers of my Capstone how a basic program can evolve into something scalable, robust, and professionally designed. Together, they form a cohesive narrative about my journey and capabilities.
+  <p>Finally, I’ve developed a growing security mindset. Throughout my enhancements, I considered maintainability, separation of concerns, and input handling. While there’s always more to learn in this area, I now approach each change with a focus on clean design, anticipate vulnerabilities, and ensure long-term maintainability of the codebase.</p>
 
-## Demonstrating the CS 499 Course Outcomes
+  <h2>How My Artifacts Fit Together</h2>
 
-### Outcome 1 – Employ strategies for building collaborative environments that enable diverse audiences to support organizational decision making in the field of computer science
+  <p>This capstone project is rooted in a single program, but each enhancement transforms it in a new way, showcasing a different area of computer science:</p>
 
-Although this was a solo project, many parts of it were designed to simulate real-world collaboration. I performed a code review with narrated video commentary that explains the program’s purpose and areas for improvement, much like I would collaboratively review code as part of a dev team. My goal was to make the code, its purpose, and its enhancements accessible to anyone reviewing the project. I also used clear version control practices and created thorough documentation to support decision-making. These practices demonstrate my understanding of collaborative processes and their importance.
+  <ul>
+    <li><strong>Enhancement One – Software Design & Engineering:</strong> Improved modularity and user experience by introducing a start menu system and restructuring gameplay logic into dedicated functions.</li>
+    <li><strong>Enhancement Two – Algorithms & Data Structures:</strong> Replaced inefficient if/elif chains with a dynamic dictionary-based system, improving maintainability and scalability.</li>
+    <li><strong>Enhancement Three – Databases:</strong> Integrated a custom SQLite database to add save/load functionality, introducing persistent storage and opening the door for future features.</li>
+  </ul>
 
-### Outcome 2 – Design, develop, and deliver professional-quality oral, written, and visual communications that are coherent, technically sound, and appropriately adapted to specific audiences and contexts
+  <p>The continuity between these enhancements shows viewers of my Capstone how a basic program can evolve into something scalable, robust, and professionally designed. Together, they form a cohesive narrative about my journey and capabilities.</p>
 
-I built my GitHub Pages site without a theme and used custom code to better reflect my skills and branding. Each section is structured with a focus on accessibility, clarity, and flow, ensuring that audiences from all backgrounds can explore my project work. Furthermore, I included a video code review and created a narrative for each enhancement with clarity and technical precision. These materials were created for a general audience, including hiring managers, and designed to be both professional and approachable. These efforts reflect my ability to deliver professional-quality communications across multiple mediums that are tailored to specific audiences.
+  <h2>Demonstrating the CS 499 Course Outcomes</h2>
 
-### Outcome 3 – Design and evaluate computing solutions that solve a given problem using algorithmic principles and computer science practices and standards appropriate to its solution, while managing the trade-offs involved in design choices
+  <h3>Outcome 1 – Employ strategies for building collaborative environments that enable diverse audiences to support organizational decision making in the field of computer science</h3>
+  <p>Although this was a solo project, many parts of it were designed to simulate real-world collaboration. I performed a code review with narrated video commentary that explains the program’s purpose and areas for improvement, much like I would collaboratively review code as part of a dev team. My goal was to make the code, its purpose, and its enhancements accessible to anyone reviewing the project, just like I would on a team. I also used clear version control practices and created thorough documentation to support decision-making. These practices demonstrate my understanding of collaborative processes and their importance.</p>
 
-Enhancement Two clearly demonstrates this outcome. I refactored the item detection system using a dictionary to eliminate repetitive conditionals, which improved readability, allowed for easier expansion, and reduced code duplication. This required thoughtful restructuring and trade-off evaluation but made the program more efficient and maintainable.
+  <h3>Outcome 2 – Design, develop, and deliver professional-quality oral, written, and visual communications that are coherent, technically sound, and appropriately adapted to specific audiences and contexts</h3>
+  <p>I built my GitHub Pages site without a theme and used custom code to better reflect my skills and branding. Each section is structured with a focus on accessibility, clarity, and flow, ensuring that audiences from all backgrounds can explore my project work. Furthermore, I included a video code review and created a narrative for each enhancement with clarity and technical precision. These materials were created for a general audience, including hiring managers, and designed to be both professional and approachable. These efforts reflect my ability to deliver professional quality communications across multiple mediums that are tailored to specific audiences.</p>
 
-### Outcome 4 – Demonstrate an ability to use well-founded and innovative techniques, skills, and tools in computing practices for the purpose of implementing computer solutions that deliver value and accomplish industry-specific goals
+  <h3>Outcome 3 – Design and evaluate computing solutions that solve a given problem using algorithmic principles and computer science practices and standards appropriate to its solution, while managing the trade-offs involved in design choices</h3>
+  <p>Enhancement Two clearly demonstrates this outcome. I refactored the item detection system using a dictionary to eliminate repetitive conditionals, which improved readability, allowed for easier expansion, and reduced code duplication. This required thoughtful restructuring and trade-off evaluation but made the program more efficient and maintainable.</p>
 
-In Enhancement Three, I introduced a database-backed save/load feature using SQLite. I chose this technology for its simplicity and relevance to industry practices. This addition not only gave the game new functionality but also demonstrated my ability to use innovative tools in a meaningful way.
+  <h3>Outcome 4 – Demonstrate an ability to use well-founded and innovative techniques, skills, and tools in computing practices for the purpose of implementing computer solutions that deliver value and accomplish industry-specific goals</h3>
+  <p>In Enhancement Three, I introduced a database-backed save/load feature using SQLite. I chose this technology for its simplicity and relevance to industry practices. This addition not only gave the game new functionality but also demonstrated my ability to use innovative tools in a meaningful way.</p>
 
-### Outcome 5 – Develop a security mindset that anticipates adversarial exploits in software architecture and designs to expose potential vulnerabilities, mitigate design flaws, and ensure privacy and enhanced security of data and resources
+  <h3>Outcome 5 – Develop a security mindset that anticipates adversarial exploits in software architecture and designs to expose potential vulnerabilities, mitigate design flaws, and ensure privacy and enhanced security of data and resources</h3>
+  <p>While the scope of this project didn’t require advanced security features, I still practiced defensive design. I improved input handling, avoided hard-coded data dependencies, and modularized the architecture to make the program easier to manage and audit. These are the first steps toward writing more secure, professional-grade software.</p>
 
-While the scope of this project didn’t require advanced security features, I still practiced defensive design. I improved input handling, avoided hard-coded data dependencies, and modularized the architecture to make the program easier to manage and audit. These are the first steps toward writing more secure, professional-grade software.
+  <p>This capstone has helped me bring together the full range of what I’ve learned—from coding fundamentals to professional communication. I now feel confident not just in writing functional software, but in designing, documenting, and presenting it in a way that reflects real-world standards. I’m proud of what I’ve created, and I’m ready to take the next step in my computer science career.</p>
 
----
+  <footer>
+    Nick Crescentini • CS499 Capstone at SNHU
+  </footer>
 
-This capstone has helped me bring together the full range of what I’ve learned—from coding fundamentals to professional communication. I now feel confident not just in writing functional software, but in designing, documenting, and presenting it in a way that reflects real-world standards. I’m proud of what I’ve created, and I’m ready to take the next step in my computer science career.
+</body>
+</html>
